--- a/style.css
+++ b/style.css
@@ -128,6 +128,9 @@ body {
   text-align: center;
   color: white;
     }
+    .imglinkcontainer:hover{
+      color: black;
+    }
 
     .centered {
   position: absolute;
